Fix video embeds overflowing on mobile viewports

--- a/src/components/Video/video.module.css
+++ b/src/components/Video/video.module.css
@@ -8,6 +8,11 @@
   height: 100%;
 }
 
+.video iframe {
+  width: 100%;
+  height: 100%;
+}
+
 .videoContainer {
   position: relative;
   height: 0;
